add more content

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                             <i class="ti-home "></i>
                         </a></li>
                     <li><a href="">Giới thiệu chung
-                        <i class="ti-angle-down angle-btn"></i>
+                            <i class="ti-angle-down angle-btn"></i>
                         </a>
                         <ul class="submenu">
                             <li><a href="">Giới thiệu chung</a></li>
@@ -28,73 +28,86 @@
                         </ul>
                     </li>
                     <li><a href="">Cơ cấu tổ chức
-                        <i class="ti-angle-down angle-btn"></i>
+                            <i class="ti-angle-down angle-btn"></i>
                         </a>
                         <ul class="submenu">
                             <li><a href="">Lãnh đạo
-                            </a>
-                            <i class="ti-angle-right right-angle-btn"></i>
-                            <ul class="submenu-special">
-                                <li><a href="">Lãnh đạo</a></li>
-                                <li><a href="">Đảng ủy</a></li>
-                            </ul>
-                        </li>
-                            <li class="sub-menu"><a href="">Các phòng,ban    
-                            </a>
-                             <i class="ti-angle-right right-angle-btn"></i>
-                             <ul class="submenu-special">
-                                <li><a href="">Phòng tổ chức - Hành chính - Tổng hợp</a></li>
-                                <li><a href="">Phòng tuyển sinh - Đào tạo</a></li>
-                                <li><a href="">Phòng kế hoạch - Tài chính</a></li>
-                                <li><a href="">Phòng Thanh tra - Giáo dục - Quan hệ doanh nghiệp  <i class="ti-angle-right right-angle-btn"></i></a></li>
-                                <li><a href="">Phòng Khảo thí và Đảm bảo chất lượng</a></li>
-                                <li><a href="">Phòng quản lý khoa học - Hợp tác quốc  tế</a></li>
-                                <li><a href="">Phòng Quản trị - Dịch vụ</a></li>
-                             </ul>
-                        </li>
-                            <li class="sub-menu"><a href="">Các khoa    
-                            </a>
-                             <i class="ti-angle-right right-angle-btn"></i>
-                             <ul class="submenu-special">
-                                <li><a href="">Khoa Khoa học cơ bản</a></li>
-                                <li><a href="">Khoa Lý luận chính trị</a></li>
-                                <li><a href="">Khoa Điện - Điện tử</a></li>
-                                <li><a href="">Khoa Cơ khí</a></li>
-                                <li><a href="">Khoa Động lực</a></li>
-                                <li><a href="">Khoa Cộng nghệ thông tin</a></li>
-                                <li><a href="">Khoa May - Thời trang</a></li>
-                                <li><a href="">Khoa Ngoại ngữ</a></li>
-                                <li><a href="">Khoa Kinh tế</a></li>
-                                <li><a href="">Khoa Xây dựng - Nhiệt lạnh</a></li>
-                                <li><a href="">Khoa Du lịch - Khách sạn</a></li>
-                             </ul>
-                        </li>
-                            <li class="sub-menu"><a href="">Các trung tâm    
-                            </a>
-                             <i class="ti-angle-right right-angle-btn"></i>
-                           <ul class="submenu-special">
-                            <li><a href="">Trung tâm thư viện</a></li>
-                            <li><a href="">Trung tâm Đào tạo và Quản lý thiết bị</a></li>
-                            <li><a href="">Trung tâm y tế</a></li>
-                            <li><a href="">Trung tâm Điều hành - Quản lý dữ liệu</a></li>
-                            <li><a href="">Trung tâm Làm Bánh</a></li>
-                           </ul>
-                        </li>
-                            <li class="sub-menu"><a href="">Đoàn thể    
-                            </a>
-                            <i class="ti-angle-right right-angle-btn"></i>
-                            <ul class="submenu-special">
-                                <li><a href="">Công đoàn</a></li>
-                                <li><a href="">Đoàn thanh niên - Hội sinh viên</a></li>
-                            </ul>
-                        </li>
+                                </a>
+                                <i class="ti-angle-right right-angle-btn"></i>
+                                <ul class="submenu-2">
+                                    <li><a href="">Lãnh đạo</a></li>
+                                    <li><a href="">Đảng ủy</a></li>
+                                </ul>
+                            </li>
+                            <li class="sub-menu"><a href="">Các phòng,ban
+                                </a>
+                                <i class="ti-angle-right right-angle-btn"></i>
+                                <ul class="submenu-2">
+                                    <li><a href="">Phòng tổ chức - Hành chính - Tổng hợp</a></li>
+                                    <li><a href="">Phòng tuyển sinh - Đào tạo</a></li>
+                                    <li><a href="">Phòng kế hoạch - Tài chính</a></li>
+                                    <li class="sub-menu special-li" ><a href="">Phòng Thanh tra - Giáo dục - Quan hệ doanh nghiệp 
+                                        <i class="ti-angle-right right-angle-btn"></i></a>
+                                        <ul class="submenu-3">
+                                            <li><a href="">Giới thiệu việc làm</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="">Phòng Khảo thí và Đảm bảo chất lượng</a></li>
+                                    <li><a href="">Phòng quản lý khoa học - Hợp tác quốc tế</a></li>
+                                    <li><a href="">Phòng Quản trị - Dịch vụ</a></li>
+                                </ul>
+                            </li>
+                            <li class="sub-menu"><a href="">Các khoa
+                                </a>
+                                <i class="ti-angle-right right-angle-btn"></i>
+                                <ul class="submenu-2">
+                                    <li><a href="">Khoa Khoa học cơ bản</a></li>
+                                    <li><a href="">Khoa Lý luận chính trị</a></li>
+                                    <li><a href="">Khoa Điện - Điện tử</a></li>
+                                    <li><a href="">Khoa Cơ khí</a></li>
+                                    <li><a href="">Khoa Động lực</a></li>
+                                    <li><a href="">Khoa Cộng nghệ thông tin</a></li>
+                                    <li><a href="">Khoa May - Thời trang</a></li>
+                                    <li><a href="">Khoa Ngoại ngữ</a></li>
+                                    <li><a href="">Khoa Kinh tế</a></li>
+                                    <li><a href="">Khoa Xây dựng - Nhiệt lạnh</a></li>
+                                    <li><a href="">Khoa Du lịch - Khách sạn</a></li>
+                                </ul>
+                            </li>
+                            <li class="sub-menu"><a href="">Các trung tâm
+                                </a>
+                                <i class="ti-angle-right right-angle-btn"></i>
+                                <ul class="submenu-2 special-li">
+                                    <li><a href="">Trung tâm thư viện
+                                        <i class="ti-angle-right right-angle-btn"></i>
+                                    </a></li>
+                                    <li><a href="">Trung tâm Đào tạo và Quản lý thiết bị
+                                        <i class="ti-angle-right right-angle-btn"></i></a>
+                                        <ul class="submenu-3">
+                                            <li><a href="">Thư viện số</a></li>
+                                            <li><a href="">Thư viện liên kết</a></li>
+                                            <li><a href="">Thông báo của thư viện</a></li>
+                                        </ul></li>
+                                    <li><a href="">Trung tâm y tế</a></li>
+                                    <li><a href="">Trung tâm Điều hành - Quản lý dữ liệu</a></li>
+                                    <li><a href="">Trung tâm Làm Bánh</a></li>
+                                </ul>
+                            </li>
+                            <li class="sub-menu"><a href="">Đoàn thể
+                                </a>
+                                <i class="ti-angle-right right-angle-btn"></i>
+                                <ul class="submenu-2">
+                                    <li><a href="">Công đoàn</a></li>
+                                    <li><a href="">Đoàn thanh niên - Hội sinh viên</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <li><a href="">Hợp tác quốc tế</a></li>
                     <li><a href="">Nghiên cứu khoa học
-                        <i class="ti-angle-down angle-btn"></i>
+                            <i class="ti-angle-down angle-btn"></i>
                         </a>
-                   
+
                         <ul class="submenu">
                             <li><a href="">Nghiên cứu khoa học</a></li>
                             <li><a href="">Đề tài cấp bộ</a></li>
@@ -110,7 +123,7 @@
                         </ul>
                     </li>
                     <li><a href="">Đào tạo
-                        <i class="ti-angle-down angle-btn"></i>
+                            <i class="ti-angle-down angle-btn"></i>
                         </a>
                         <ul class="submenu">
                             <li><a href="">Tiến độ thực hiện - Kế hoạch đào tạo</a></li>
@@ -120,7 +133,7 @@
                         </ul>
                     </li>
                     <li><a href="">Công khai giáo dục
-                        <i class="ti-angle-down angle-btn"></i>
+                            <i class="ti-angle-down angle-btn"></i>
                         </a>
                         <ul class="submenu">
                             <li><a href="">Năm học 2023-2024</a></li>
