Update header submenu-3

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
                                     <li><a href="">Phòng tổ chức - Hành chính - Tổng hợp</a></li>
                                     <li><a href="">Phòng tuyển sinh - Đào tạo</a></li>
                                     <li><a href="">Phòng kế hoạch - Tài chính</a></li>
-                                    <li class="sub-menu special-li" ><a href="">Phòng Thanh tra - Giáo dục - Quan hệ doanh nghiệp 
-                                        <i class="ti-angle-right right-angle-btn"></i></a>
+                                    <li class="sub-menu special-li"><a href="">Phòng Thanh tra - Giáo dục - Quan hệ
+                                            doanh nghiệp
+                                            <i class="ti-angle-right right-angle-btn"></i></a>
                                         <ul class="submenu-3">
                                             <li><a href="">Giới thiệu việc làm</a></li>
                                         </ul>
@@ -77,79 +78,94 @@
                             <li class="sub-menu"><a href="">Các trung tâm
                                 </a>
                                 <i class="ti-angle-right right-angle-btn"></i>
-                                <ul class="submenu-2 special-li">
-                                    <li><a href="">Trung tâm thư viện
-                                        <i class="ti-angle-right right-angle-btn"></i>
-                                    </a></li>
-                                    <li><a href="">Trung tâm Đào tạo và Quản lý thiết bị
-                                        <i class="ti-angle-right right-angle-btn"></i></a>
-                                        <ul class="submenu-3">
-                                            <li><a href="">Thư viện số</a></li>
-                                            <li><a href="">Thư viện liên kết</a></li>
-                                            <li><a href="">Thông báo của thư viện</a></li>
-                                        </ul></li>
-                                    <li><a href="">Trung tâm y tế</a></li>
-                                    <li><a href="">Trung tâm Điều hành - Quản lý dữ liệu</a></li>
-                                    <li><a href="">Trung tâm Làm Bánh</a></li>
+                                <ul class="submenu-2 ">
+                                    <li class="special-li sub-menu"><a href="">Trung tâm thư viện
+                                            <i class="ti-angle-right right-angle-btn"></i></a>
+                                   <ul class="submenu-3">
+                                    <li><a href="">Thư viện số</a></li>
+                                    <li><a href="">Thư viện liên kết</a></li>
+                                    <li><a href="">Thông báo của thư viện</a></li>
+                                   </ul>
+                            </li>
+                            <li class="special-li sub-menu"><a href="">Trung tâm Đào tạo và Quản lý thiết bị
+                                    <i class="ti-angle-right right-angle-btn"></i></a>
+                                <ul class="submenu-3">
+                                    <li><a href="">Trung tâm đào tạo Ngoại Ngữ Tin Học</a></li>
                                 </ul>
                             </li>
-                            <li class="sub-menu"><a href="">Đoàn thể
-                                </a>
-                                <i class="ti-angle-right right-angle-btn"></i>
-                                <ul class="submenu-2">
-                                    <li><a href="">Công đoàn</a></li>
-                                    <li><a href="">Đoàn thanh niên - Hội sinh viên</a></li>
-                                </ul>
-                            </li>
+                            <li><a href="">Trung tâm y tế</a></li>
+                            <li><a href="">Trung tâm Điều hành - Quản lý dữ liệu</a></li>
+                            <li><a href="">Trung tâm Làm Bánh</a></li>
                         </ul>
                     </li>
-                    <li><a href="">Hợp tác quốc tế</a></li>
-                    <li><a href="">Nghiên cứu khoa học
-                            <i class="ti-angle-down angle-btn"></i>
+                    <li class="sub-menu"><a href="">Đoàn thể
                         </a>
+                        <i class="ti-angle-right right-angle-btn"></i>
+                        <ul class="submenu-2">
+                            <li><a href="">Công đoàn</a></li>
+                            <li><a href="">Đoàn thanh niên - Hội sinh viên</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                </li>
+                <li><a href="">Hợp tác quốc tế</a></li>
+                <li><a href="">Nghiên cứu khoa học
+                        <i class="ti-angle-down angle-btn"></i>
+                    </a>
 
-                        <ul class="submenu">
-                            <li><a href="">Nghiên cứu khoa học</a></li>
-                            <li><a href="">Đề tài cấp bộ</a></li>
-                            <li><a href="">Đề tài cấp sở</a></li>
-                            <li><a href="">Đề tài cấp trường</a></li>
-                            <li><a href="">Đề tài sinh viên</a></li>
-                            <li><a href="">Hội nghị quốc tế ICSS 2018</a></li>
-                            <li><a href="">Hội nghị khoa học COSS 2019</a></li>
-                            <li><a href="">Hội nghị khoa học COSS 2020</a></li>
-                            <li><a href="">Hội nghị quốc tế ICSS2021</a></li>
-                            <li><a href="">Hội nghị quốc tế ICSS2022</a></li>
-                            <li><a href="">Hội thảo khoa học COSS2023</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="">Đào tạo
-                            <i class="ti-angle-down angle-btn"></i>
-                        </a>
-                        <ul class="submenu">
-                            <li><a href="">Tiến độ thực hiện - Kế hoạch đào tạo</a></li>
-                            <li><a href="">Tra cứu văn bằng</a></li>
-                            <li><a href="">Tài liệu sinh hoạt công dân</a></li>
-                            <li><a href="">E-learning</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="">Công khai giáo dục
-                            <i class="ti-angle-down angle-btn"></i>
-                        </a>
-                        <ul class="submenu">
-                            <li><a href="">Năm học 2023-2024</a></li>
-                            <li><a href="">Năm học 2022-2023</a></li>
-                            <li><a href="">Năm học 2021-2022</a></li>
-                            <li><a href="">Năm học 2020-2021</a></li>
-                            <li><a href="">Năm học 2019-2020</a></li>
-                            <li><a href="">Năm học 2018-2019</a></li>
-                            <li><a href="">Năm học 2017-2018</a></li>
-                            <li><a href="">Năm học 2016-2017</a></li>
-                            <li><a href="">Năm học 2015-2016</a></li>
-                            <li><a href="">Năm học 2014-2015</a></li>
-                            <li><a href="">Năm học 2012-2013</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="">Liên hệ</a></li>
+                    <ul class="submenu">
+                        <li><a href="">Nghiên cứu khoa học</a></li>
+                        <li><a href="">Đề tài cấp bộ</a></li>
+                        <li><a href="">Đề tài cấp sở</a></li>
+                        <li><a href="">Đề tài cấp trường</a></li>
+                        <li><a href="">Đề tài sinh viên</a></li>
+                        <li><a href="">Hội nghị quốc tế ICSS 2018</a></li>
+                        <li><a href="">Hội nghị khoa học COSS 2019</a></li>
+                        <li><a href="">Hội nghị khoa học COSS 2020</a></li>
+                        <li><a href="">Hội nghị quốc tế ICSS2021</a></li>
+                        <li><a href="">Hội nghị quốc tế ICSS2022</a></li>
+                        <li><a href="">Hội thảo khoa học COSS2023</a></li>
+                    </ul>
+                </li>
+                <li><a href="">Đào tạo
+                        <i class="ti-angle-down angle-btn"></i>
+                    </a>
+                    <ul class="submenu">
+                        <li><a href="">Tiến độ thực hiện - Kế hoạch đào tạo</a></li>
+                        <li><a href="">Tra cứu văn bằng</a></li>
+                        <li class="special-li sub-menu"><a href="">Tài liệu sinh hoạt công dân</a>
+                            <i class="ti-angle-right right-angle-btn"></i>
+                            <ul class="submenu-2">
+                                <li><a href="">Năm học 2017-2018</a></li>
+                                <li><a href="">Năm học 2018-2019</a></li>
+                                <li><a href="">Năm học 2019-2020</a></li>
+                                <li><a href="">Năm học 2020-2021</a></li>
+                                <li><a href="">Năm học 2021-20222</a></li>
+                                <li><a href="">Năm học 2022-2023</a></li>
+                                <li><a href="">Năm học 2023-2024</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="">E-learning</a></li>
+                    </ul>
+                </li>
+                <li><a href="">Công khai giáo dục
+                        <i class="ti-angle-down angle-btn"></i>
+                    </a>
+                    <ul class="submenu">
+                        <li><a href="">Năm học 2023-2024</a></li>
+                        <li><a href="">Năm học 2022-2023</a></li>
+                        <li><a href="">Năm học 2021-2022</a></li>
+                        <li><a href="">Năm học 2020-2021</a></li>
+                        <li><a href="">Năm học 2019-2020</a></li>
+                        <li><a href="">Năm học 2018-2019</a></li>
+                        <li><a href="">Năm học 2017-2018</a></li>
+                        <li><a href="">Năm học 2016-2017</a></li>
+                        <li><a href="">Năm học 2015-2016</a></li>
+                        <li><a href="">Năm học 2014-2015</a></li>
+                        <li><a href="">Năm học 2012-2013</a></li>
+                    </ul>
+                </li>
+                <li><a href="">Liên hệ</a></li>
                 </ul>
             </div>
 
